[package]
name = "hardwire"
version = "0.1.0"
authors = ["Adrien Pestel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive_more = "1.0.0"
askama = "0.12.0"
nanoid = "0.4.0"
log = "0.4.14"
pretty_env_logger = "0.5.0"
console-subscriber = "0.4.1"

oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.2"

clap = { version = "4.5.6", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.10"
tower-http = { version = "0.6.2", features = ["full"] }
axum = { version = "0.8.1", features = ["ws", "tokio"] }
axum-extra = "0.10.0"
axum-tracing-opentelemetry = { version = "0.25.0" }
url = "2.5.0"
http = "1.1.0"
tempfile = "3.10.0"
sevenz-rust = { version = "0.6.1", features = [ "aes256"] }

# opentelemetry-http = "0.13.0"
opentelemetry-otlp = { version = "0.27.0", default-features = true }

tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }

init-tracing-opentelemetry = { version = "0.25.1", features = [
    "tracing_subscriber_ext",
] }

tracing-opentelemetry-instrumentation-sdk = "0.24.0"

sha2 = "0.10.7"
sqlx = { version = "0.8.2", default-features = false, features = [
    "sqlite",
    "macros",
    "migrate",
    "runtime-tokio",
] }
chrono = "0.4.38"
# openssl = { version = "0.10.38", features = ["vendored"] }

# qbittorrent = { git = "https://github.com/apestel/qbittorrent" }
walkdir = "2.4.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

bytes = "1.3.0"
futures = "0.3.28"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
indextree = "4.7.3"
opentelemetry = { version = "0.27.1" }
thiserror = "1.0"

[dev-dependencies]
mockall = "0.12"
