[package]
name = "hardwire"
version = "0.1.0"
authors = ["Adrien Pestel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive_more = "1.0.0"
askama = "0.14.0"
nanoid = "0.4.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
console-subscriber = "0.4.1"

# oauth2 = { version = "5.0.0", features = ["reqwest"] }
openidconnect = "4.0.1"
reqwest = { version = "0.12.24", features = ["json"] }
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }

clap = { version = "4.5.50", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tower-http = { version = "0.6.6", features = ["full"] }
axum = { version = "0.8.6", features = ["ws", "tokio"] }
axum-extra = "0.10.3"
axum-tracing-opentelemetry = { version = "0.32.1" }
url = "2.5.7"
http = "1.3.1"
tempfile = "3.23.0"
sevenz-rust = { version = "0.6.1", features = [ "aes256"] }

# opentelemetry-http = "0.13.0"
opentelemetry-otlp = { version = "0.31.0", default-features = true }

tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }

init-tracing-opentelemetry = { version = "0.32.1", features = [
    "tracing_subscriber_ext",
] }

tracing-opentelemetry-instrumentation-sdk = "0.32.1"

sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "macros",
    "migrate",
    "runtime-tokio",
] }
chrono = "0.4.42"
# openssl = { version = "0.10.38", features = ["vendored"] }

# qbittorrent = { git = "https://github.com/apestel/qbittorrent" }
walkdir = "2.5.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

bytes = "1.10.1"
futures = "0.3.31"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
indextree = "4.7.4"
opentelemetry = { version = "0.31.0" }
thiserror = "2.0.17"

[dev-dependencies]
mockall = "0.13.1"
